Fix custom dimensions on Firefox
Since Firefox's scrollbar hiding requires the scrollElement to be 100%
width it doesn't work when it doesn't fill the parent. Inserting divs so
that it can have 100% width has proven problematic so the scrollbars
will simply revert back to native. This introduces the useNative option
so that you can maintain scrollStart and scrollStop events with native
scrollbars.

--- a/demos/styles.css
+++ b/demos/styles.css
@@ -108,9 +108,9 @@ button:hover {
 #border-div {
     position: absolute; 
     width: 400px; 
-    top: 200px; 
+    top: 450px; 
     height: 300px; 
-    left: 600px; 
+    left: 100px; 
     background: lightskyblue; 
     padding: 20px;
     border-color: teal;
@@ -152,8 +152,8 @@ button:hover {
     background-clip: padding-box;
     border-radius:3px;
     cursor: pointer;
-    top: 10px;
-    bottom: 10px;
+    top: 0px;
+    bottom: 0px;
 	width: 10px;
 }
 
